	+ added build option '--enable-relax'
	  - 'relaxed' interpretation of pre-analyses:
	     * raises accuracy and speed at the cost of internal coverage
	       (lose "strict" interpretation of pre-analyses)
	     * makes no difference to rare (*.tt) tagging
	     * reduces -classfreq medium-rare (*.dmt) tagging to 'rare' case (hurts)
	     * helps with +classfreq medium-rare (*.cmt) tagging
	+ added pkg-config variable 'build_options'
	  - for easy access to compile-time options for an installed distribution
	+ pre-compute log-probabilities
	  - avoid underflow, and a snippet faster at runtime
	+ reduce storage requirements by storing unigrams as [0][tagid]
	  - i.e. the 'unknown' tag is never valid
	+ renamed '(w|c)lambda(1|2)' to '(w|c)lambda(0|1)'
	  - a bit more intuitive
	
v2.0.1 Fri, 16 Jul 2004 14:02:07 +0200
	+ fixed XML parsing bug which somehow snuck into version 2.0.0

v2.0.0 Fri, 09 Jul 2004 00:18:26 +0200
	+ Documentation and general cleanup
	+ added 'static' binary distribution build target
	  - linker complains about getpwuid() [used by
	    command-line parsers] requiring native glibc...
	+ added famous "no warranty" banner

v2.0.0pre11 Fri, 09 Jul 2004 00:18:21 +0200
	+ Added abstract 'mootio' layer:
	  - replaces old mootBinStream
	  - abstract I/O source/sink wrapper supporting:
	    * C FILE*         : mootCIO.h
	    * C char*         : mootBufferIO.h
	    * zlib gzFile     : mootZIO.h
	    * C++ (i|o)stream : mootCxxIO.h
	  - main justification for not just using C++ streams
	    * we want to keep "real" printf() for C FILE*s and buffers
	  - Upshot:
	    * inheritable from_*() / to_*() methods in lexers, formatters, etc.
	    * just need to wrap calls to mootio::m*stream objects
	+ Added detail-saving for XML input: for best XML->native conversion,
	  use '--output-format=Native,Pretty'
	  - fixes bug:
  	    * Analysis details get lost in default XML output
	      ~ so that after the following: